# germanki

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  PROPOSAL_DATABASE.md  README.md  ROADMAP_WEB.md  pyproject.toml  sonar-project.properties
.github/workflows/: ci-cd.yaml  publish.yaml  tag-and-release.yaml  unit-test.yaml
.streamlit/: config.toml
src/germanki/: __main__.py  anki.py  anki_connect.py  app.py  chatgpt.py  config.py  core.py  llm.py  logging.py  pexels.py  save.pkl  tts_mp3.py  ui.py  utils.py
src/germanki/.streamlit/: config.toml
src/germanki/data/input_examples/: default.yaml
src/germanki/photos/: __init__.py  pexels.py  unsplash.py
src/germanki/static/input_examples/: default.yaml
src/germanki/web/: app.py  app_gen_route.py  session.py  templates.py
src/germanki/web/templates/: base.html  index.html
src/germanki/web/templates/anki/: back.html  extra.html  front.html
src/germanki/web/templates/partials/: card_list.html  card_preview.html  status_banner.html
tests/unit/: test_anki.py  test_anki_connect.py  test_core.py  test_llm.py  test_pexels.py  test_tts_mp3.py  test_ui.py
