[project]
name = "germanki"
version = "0.3.0"
description = ""
authors = [{ name = "Gabriel R. Pereira" }]
requires-python = ">=3.11"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "streamlit>=1.41.1,<2",
    "pydantic>=2.10.6,<3",
    "openai>=1.61.0,<2",
    "ratelimit>=2.2.1,<3",
    "tenacity>=9.0.0,<10",
    "pyyaml>=6.0.2",
]

[project.scripts]
germanki = "germanki.__main__:main"

[dependency-groups]
dev = [
    "pytest>=8.3.4,<9",
    "coverage>=7.6.10,<8",
    "pytest-cov>=6.0.0,<7",
    "requests-mock>=1.12.1,<2",
    "pre-commit>=4.1.0,<5",
    "watchdog>=6.0.0,<7",
]

[tool.uv]
default-groups = "all"

[tool.hatch.build.targets.sdist]
include = ["src/germanki"]

[tool.hatch.build.targets.sdist.force-include]
"germanki/.streamlit/**" = "germanki/.streamlit/**"
"germanki/input_examples/**" = "germanki/input_examples/**"
"germanki/static/audio/sample_Hans.mp3" = "germanki/static/audio/sample_Hans.mp3"
"germanki/static/audio/sample_Vicki.mp3" = "germanki/static/audio/sample_Vicki.mp3"
"germanki/static/audio/sample_Marlene.mp3" = "germanki/static/audio/sample_Marlene.mp3"

[tool.hatch.build.targets.wheel]
include = ["src/germanki"]

[tool.hatch.build.targets.wheel.sources]
"src/germanki" = "germanki"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.coverage.report]
fail_under = 70
