[project]
name = "germanki"
version = "0.3.0"
description = ""
authors = [{ name = "Gabriel R. Pereira" }]
requires-python = ">=3.11"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "pydantic>=2.10.6,<3",
    "pyyaml>=6.0.2",
    "fastapi>=0.135.1",
    "uvicorn>=0.42.0",
    "python-multipart>=0.0.22",
    "jinja2>=3.1.5",
    "httpx>=0.28.1",
    "pydantic-settings>=2.13.1",
    "aiosqlite>=0.22.1",
    "litellm>=1.80.0",
    "instructor>=1.12.0",
    "platformdirs>=4.3.6",
    "genanki>=0.13.1",
]

[project.scripts]
germanki = "germanki.__main__:main"

[dependency-groups]
dev = [
    "pytest>=8.3.4,<9",
    "coverage>=7.6.10,<8",
    "pytest-cov>=6.0.0,<7",
    "requests-mock>=1.12.1,<2",
    "pre-commit>=4.1.0,<5",
    "watchdog>=6.0.0,<7",
    "respx>=0.22.0",
    "pytest-asyncio>=1.3.0",
]

[tool.uv]
default-groups = "all"

[tool.hatch.build.targets.sdist]
include = ["src/germanki"]

[tool.hatch.build.targets.sdist.force-include]
"germanki/web/templates/**" = "germanki/web/templates/**"
"germanki/web/static/**" = "germanki/web/static/**"
"germanki/input_examples/**" = "germanki/input_examples/**"
"germanki/static/audio/sample_Hans.mp3" = "germanki/static/audio/sample_Hans.mp3"
"germanki/static/audio/sample_Vicki.mp3" = "germanki/static/audio/sample_Vicki.mp3"
"germanki/static/audio/sample_Marlene.mp3" = "germanki/static/audio/sample_Marlene.mp3"

[tool.hatch.build.targets.wheel]
include = ["src/germanki"]

[tool.hatch.build.targets.wheel.sources]
"src/germanki" = "germanki"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.coverage.report]
fail_under = 70
